// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Form basic usage 1`] = `
<div>
  <form
    class="rc-form"
  >
    <div
      class="rc-cell-group rc-cell-group--inset"
    >
      <div
        class="rc-cell rc-cell--required rc-field rc-field--disabled rc-form"
      >
        <div
          class="rc-cell__title rc-field__label"
        >
          用户名
          :
          <div
            class="rc-field__tooltip"
          >
            <i
              class="rc-badge__wrapper van-icon van-icon-question-o"
            />
          </div>
        </div>
        <div
          class="rc-cell__value rc-field__value"
        >
          <div
            class="rc-field__body"
          >
            <input
              class="rc-field__control"
              disabled=""
              placeholder="请输入用户名"
              value=""
            />
          </div>
          <div
            class="rc-field__intro"
          >
            确保这是唯一的用户名
          </div>
        </div>
      </div>
      <div
        class="rc-cell rc-field rc-field--label-center rc-form my-password"
      >
        <div
          class="rc-cell__title rc-field__label rc-field__label--center my-label-class"
          style="width: 100px;"
        >
          密码
          :
        </div>
        <div
          class="rc-cell__value rc-field__value"
        >
          <div
            class="rc-field__body"
          >
            <input
              class="rc-field__control"
              placeholder="请输入密码"
              value=""
            />
          </div>
        </div>
      </div>
    </div>
    <div
      class="rc-form__footer"
    >
      <div
        style="margin: 16px 16px 0px;"
      >
        <button
          class="rc-button rc-button--primary rc-button--normal rc-button--block rc-button--round"
          type="submit"
        >
          <div
            class="rc-button__content"
          >
            <span
              class="rc-button__text"
            >
              提交
            </span>
          </div>
        </button>
      </div>
    </div>
  </form>
</div>
`;

exports[`Form when name props is set without shouldUpdate or dependencies 1`] = `
<div>
  <form
    class="rc-form"
  >
    <div
      class="rc-cell-group rc-hairline--top-bottom"
    >
      <div
        class="rc-cell rc-field rc-form"
      >
        <div
          class="rc-cell__value rc-cell__value--alone rc-field__value"
        >
          <div
            class="rc-field__body"
          >
            <input
              class="rc-field__control"
              placeholder=""
              value=""
            />
          </div>
        </div>
      </div>
    </div>
  </form>
</div>
`;

exports[`Form when noStyle props is set 1`] = `
<div>
  <form
    class="rc-form"
  >
    <div
      class="rc-cell-group rc-hairline--top-bottom"
    >
      <div
        class="rc-cell rc-field"
      >
        <div
          class="rc-cell__value rc-cell__value--alone rc-field__value"
        >
          <div
            class="rc-field__body"
          >
            <input
              class="rc-field__control"
              placeholder="请输入密码"
              value=""
            />
          </div>
        </div>
      </div>
    </div>
  </form>
</div>
`;

exports[`Form when rules with reqiured props is set 1`] = `
<div>
  <form
    class="rc-form"
  >
    <div
      class="rc-cell-group rc-hairline--top-bottom"
    >
      <div
        class="rc-cell rc-field rc-form"
      >
        <div
          class="rc-cell__value rc-cell__value--alone rc-field__value"
        >
          <div
            class="rc-field__body"
          >
            <input
              class="rc-field__control"
              placeholder="请输入密码"
              value=""
            />
          </div>
        </div>
      </div>
    </div>
  </form>
</div>
`;

exports[`Form when rules without reqiured props is set 1`] = `
<div>
  <form
    class="rc-form"
  >
    <div
      class="rc-cell-group rc-hairline--top-bottom"
    >
      <div
        class="rc-cell rc-field rc-form"
      >
        <div
          class="rc-cell__value rc-cell__value--alone rc-field__value"
        >
          <div
            class="rc-field__body"
          >
            <input
              class="rc-field__control"
              placeholder="请输入密码"
              value=""
            />
          </div>
        </div>
      </div>
    </div>
  </form>
</div>
`;

exports[`Form when shouldUpdate and dependencies are not set 1`] = `
<div>
  <form
    class="rc-form"
  >
    <div
      class="rc-cell-group rc-hairline--top-bottom"
    >
      <div
        class="rc-cell rc-field rc-form"
      >
        <div
          class="rc-cell__value rc-cell__value--alone rc-field__value"
        >
          <div
            class="rc-field__body"
          >
            <input
              class="rc-field__control"
              placeholder=""
              value=""
            />
          </div>
        </div>
      </div>
    </div>
  </form>
</div>
`;

exports[`Form when shouldUpdate props is set 1`] = `
<div>
  <form
    class="rc-form"
  >
    <div
      class="rc-cell-group rc-hairline--top-bottom"
    >
      <div
        class="rc-cell rc-field rc-form"
      >
        <div
          class="rc-cell__value rc-cell__value--alone rc-field__value"
        >
          <div
            class="rc-field__body"
          >
            <div
              class="rc-field__control rc-field__control--custom"
            >
              <div
                class="rc-cell rc-field"
              >
                <div
                  class="rc-cell__value rc-cell__value--alone rc-field__value"
                >
                  <div
                    class="rc-field__body"
                  >
                    <input
                      class="rc-field__control"
                      placeholder="请输入密码"
                      value=""
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </form>
</div>
`;
